# SLAMjotbob_course

./: readme.md  schedules.md
Custom_package/: readme.md
Custom_package/JH/: C++ 개념.md  Drone control node.md  Simulation.md  node creation.md  readme.md
Custom_package/JH/my_drone/: readme.md
Custom_package/JH/my_drone/code/: jh_key_finder.cpp  jhdrone.cpp  jhdrone_position.cpp  jhdrone_rotate_all.cpp  jhdrone_velocity.cpp  jhtalker.cpp  key_values.txt  readme.md
Custom_package/JH/my_drone/code/feedback/: CMakeLists.txt  package.xml  readme.md
Custom_package/JH/my_drone/code/feedback/include/: drone_control.h  util.h
Custom_package/JH/my_drone/code/feedback/src/: drone_control.cpp  main.cpp
Custom_package/LD/: circle.md  stack & queue.md
Drone_simulating(URDF)/: readme.md
Drone_simulating(URDF)/Typhoon/: readme.md
SLAM/: readme.md
Xavier_setting/: + option(hangul, browser, terminator).md  0. Install Xavier & SSD  0. Install Xavier & SSD.md  0. Install Xavier OS.md  0. SSD booting dist.md  1. Ros noetic set up.md  1. SSD mount & boot.md  2. Mavros.md  2. ROS noetic install.md  3. Mavros install.md  4. Auto start.md  4. Pixhawk connect.md  5. Auto start.md  6. OpenCV.md  6. USB port symbolic link.md  7. LiDAR.md  8. Opencv install & build.md  8. Simulation.md  9. LiDAR.md  readme.md
